Bug 265592 - REGRESSION (268955@main): Accepting inline predictions breaks ability to change selection by tapping in Mail compose
Summary: REGRESSION (268955@main): Accepting inline predictions breaks ability to chan...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-30 11:37 PST by Wenson Hsieh
Modified: 2023-11-30 16:02 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-11-30 11:37:07 PST
rdar://118094413
Comment 1 Wenson Hsieh 2023-11-30 12:29:51 PST
Pull request: https://github.com/WebKit/WebKit/pull/21119
Comment 2 EWS 2023-11-30 16:02:33 PST
Committed 271361@main (8796ae7158aa): <https://commits.webkit.org/271361@main>

Reviewed commits have been landed. Closing PR #21119 and removing active labels.